# ChangeLog for dev-libs/miracl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Apr 2007; Bryan Drewery <bryan@shatow.net> ChangeLog:
  Port miracl to gentoo
