@@ -1,12 +1,12 @@
 DIST miracl.zip 1509370 RMD160 6954eace208739a10a37febe61a6b5996e59e0e8 SHA1 57d1dde25da7097dde990124e6776e3a5db1476d SHA256 fcc3beef51d847ffae36fbf3fec396d949b3131f85d097811a4fb896ed8d18c6
-EBUILD miracl-5.22.ebuild 1371 RMD160 0ee17437c6e2b9d5fc74c37a59d798dcb0a71efb SHA1 3229983ba373c044588f890d0c0a180cbb5d8b16 SHA256 d8441b70a149dfdc8d69325dbb7dcbbe10115f3dc2d3d623610d446b8d455ed3
-MD5 06431e17f9a9667f042471cd8fa68f9e miracl-5.22.ebuild 1371
-RMD160 0ee17437c6e2b9d5fc74c37a59d798dcb0a71efb miracl-5.22.ebuild 1371
-SHA256 d8441b70a149dfdc8d69325dbb7dcbbe10115f3dc2d3d623610d446b8d455ed3 miracl-5.22.ebuild 1371
-MISC ChangeLog 200 RMD160 f4e45ed64b5d584575d82b7a8646c53c2adfc089 SHA1 c79b47f1fc5e04d6e87b46e720c69e6f7b428b77 SHA256 1b36ace37276618b10dbca40c35480777d0457a2e179c16112c7a56673d2e8ac
-MD5 44287df63405194577752acbdd549850 ChangeLog 200
-RMD160 f4e45ed64b5d584575d82b7a8646c53c2adfc089 ChangeLog 200
-SHA256 1b36ace37276618b10dbca40c35480777d0457a2e179c16112c7a56673d2e8ac ChangeLog 200
+EBUILD miracl-5.22.ebuild 1782 RMD160 872b53dfb595d88745b8a08fea2a790e064c6a32 SHA1 efd54aadbf1c6333e5bc9ea9a416f62310d8925d SHA256 0b95ae1bc2386a99c0c84c03ef8eee7a5ddf242bf8da4f51498fce3e8d37d42a
+MD5 543e46caf0990963523ea7e920814c01 miracl-5.22.ebuild 1782
+RMD160 872b53dfb595d88745b8a08fea2a790e064c6a32 miracl-5.22.ebuild 1782
+SHA256 0b95ae1bc2386a99c0c84c03ef8eee7a5ddf242bf8da4f51498fce3e8d37d42a miracl-5.22.ebuild 1782
+MISC ChangeLog 312 RMD160 ed3ad1231344d1b3e3ff503d340102ec2159139a SHA1 ff195b711008ac390ac82967bdd9ba4879e3b375 SHA256 bb9a160857036147697d18dc2aaaa773893e1d57221bea479c072a398290fdab
+MD5 ee8ba3b4618e8dd14fc9a97bcde68798 ChangeLog 312
+RMD160 ed3ad1231344d1b3e3ff503d340102ec2159139a ChangeLog 312
+SHA256 bb9a160857036147697d18dc2aaaa773893e1d57221bea479c072a398290fdab ChangeLog 312
 MISC metadata.xml 1307 RMD160 add20fa959b2487d9590464a7b109c743f5996fa SHA1 dafe8d4360987569d4ba012c9ecf27c56f74025e SHA256 1459cbe96e52f881c76f9b595a29efef10863654a2ef67bb8f8b119d4cb83630
 MD5 c4ee76bf212f59ac69f13e2537753eba metadata.xml 1307
 RMD160 add20fa959b2487d9590464a7b109c743f5996fa metadata.xml 1307
