@@ -3,5 +3,8 @@
 # $Header: $
 
   05 Apr 2007; Bryan Drewery <bryan@shatow.net> ChangeLog:
+  Fix build script to use proper toolchan functions
+
+  05 Apr 2007; Bryan Drewery <bryan@shatow.net> ChangeLog:
   Port miracl to gentoo
 
